--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-
-spring.datasource.url=jdbc:postgresql://35.200.224.64:5432/CrudApp
+spring.datasource.url=jdbc:postgresql://localhost:5433/CrudApp
 spring.datasource.username=postgres
-spring.datasource.password=confused123456
+spring.datasource.password=confused@123456
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
